--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div style="position: relative; margin: 10px 0 500px 10px;">
 	
        
-         <img src="~/imgs/pizza.png" class="pizza"/>
+         <img src="https://github.com/SamanthaArriaga/Santino/blob/master/imgs/pizza.png" class="pizza"/>
         <img src="~/imgs/aceitunas.png" style="display: none" id="aceitunas" class="ingredients"/>
         <img src="~/imgs/cebolla.png" style="display: none" id="cebolla" class="ingredients"/>
         <img src="~/imgs/pimiento.png" style="display: none" id="pimiento" class="ingredients"/>
