--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
         <div style="position: relative; margin: 10px 0 500px 10px;">
 	
        
-         <img src="https://github.com/SamanthaArriaga/Santino/blob/master/imgs/pizza.png" class="pizza"/>
-        <img src="~/imgs/aceitunas.png" style="display: none" id="aceitunas" class="ingredients"/>
-        <img src="~/imgs/cebolla.png" style="display: none" id="cebolla" class="ingredients"/>
-        <img src="~/imgs/pimiento.png" style="display: none" id="pimiento" class="ingredients"/>
-        <img src="~/imgs/Picture1.png" style="display: none" id="bacon" class="ingredients"/>
+         <img src="https://samanthaarriaga.github.io/Santino/imgs/pizza.png" class="pizza"/>
+        <img src="https://samanthaarriaga.github.io/Santino/aceitunas.png" style="display: none" id="aceitunas" class="ingredients"/>
+        <img src="https://samanthaarriaga.github.io/Santino/cebolla.png" style="display: none" id="cebolla" class="ingredients"/>
+        <img src="https://samanthaarriaga.github.io/Santino/pimiento.png" style="display: none" id="pimiento" class="ingredients"/>
+        <img src="https://samanthaarriaga.github.io/Santino/Picture1.png" style="display: none" id="bacon" class="ingredients"/>
       
 	
 </div>
