--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Custom styles for this template -->
   <link href="https://samanthaarriaga.github.io/Santino/css/modern-business.css" rel="stylesheet">
-     <link href="https://samanthaarriaga.github.io/Santino/css/style.css" rel="stylesheet">
+     <link href="https://samanthaarriaga.github.io/Santino/css/Style.css" rel="stylesheet">
     
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
