--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Custom styles for this template -->
   <link href="https://samanthaarriaga.github.io/Santino/css/modern-business.css" rel="stylesheet">
-     <link href="https://samanthaarriaga.github.io/Santino/css/Style.css" rel="stylesheet">
+     <link href="https://samanthaarriaga.github.io/Santino/css/style.css" rel="stylesheet">
     
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -224,8 +224,8 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="https://samanthaarriaga.github.io/Santino/vendor/jquery/jquery.min.js"></script>
+  <script src="https://samanthaarriaga.github.io/Santino/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
