--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
     border: 10px solid red;
     width: 100%;
     height: 100px;">
-                <h3>Pepperoni con chorizo</h3>    
+                <h3>Chorizo con pepperoni</h3>    
                 </div>
                     <div >
                     <img src="imgs/p_pepperonichorizo.jpg" style="width: 100%; height: 210px" />
