--- a/index.html
+++ b/index.html
@@ -913,7 +913,7 @@
         <div class="container">
         
         <h1 class="my-4">Queremos escucharte</h1>
-         <form method="post" action="escuchar.php">
+         <form method="post" action="https://formspree.io/analyarriaga31@gmail.com">
   <div class="form-group">
      <input type="email" class="form-control"  name="Nombre" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Nombre ...">
    
