--- a/index.html
+++ b/index.html
@@ -915,11 +915,13 @@
         <h1 class="my-4">Queremos escucharte</h1>
          <form method="post" action="https://formspree.io/analyarriaga31@gmail.com">
   <div class="form-group">
-     <input type="email" class="form-control"  name="Nombre" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Nombre ...">
+<input type="hidden" name="QueremosEscuchar" value="QueremosEscuchar">
+
+     <input type="text" class="form-control"  name="Nombre" id="exampleInputEmail1"placeholder="Nombre ...">
    
   </div>
 <div class="form-group">
-     <input type="email" class="form-control"  name="telefono" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Telefono...">
+     <input type="text" class="form-control"  name="telefono" id="exampleInputEmail1" placeholder="Telefono...">
    
   </div>
 <div class="form-group">
@@ -946,17 +948,20 @@
         <div class="container">
         
         <h1 class="my-4">Bolsa de trabajo</h1>
-             <form>
+            <form method="post" action="https://formspree.io/analyarriaga31@gmail.com">
+                
+<input type="hidden" name="BolsaDeTrabajo" value="BolsaDeTrabajo">
+  
   <div class="form-group">
-     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Nombre ...">
+     <input type="text" class="form-control" id="exampleInputEmail1" name="Nombre" placeholder="Nombre ...">
    
   </div>
 <div class="form-group">
-     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Telefono...">
+     <input type="text" class="form-control" id="exampleInputEmail1" name="Telefono" placeholder="Telefono...">
    
   </div>
 <div class="form-group">
-     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Correo...">
+     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Correo..." name="Correo">
    
   </div>
 <div class="form-group">
@@ -968,7 +973,7 @@
       </select>
   </div>
 <div class="form-group">
-       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="mensaje"></textarea>
     <small id="emailHelp" class="form-text text-muted">Comentario</small>
   </div>
  
